--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
             <p class="cafe-subtitle">따뜻한 한 잔의 행복</p>
         </header>
 
+        <!-- 카테고리 바로가기 -->
+        <nav class="category-nav">
+            <a href="#coffee" class="category-link">☕ 커피</a>
+            <a href="#latte" class="category-link">🥛 라떼</a>
+            <a href="#tea" class="category-link">🫖 티</a>
+            <a href="#ade" class="category-link">🍹 에이드</a>
+        </nav>
+
         <!-- 메뉴판 -->
         <section class="menu-section">
             <!-- COFFEE -->
-            <div class="menu-category">
+            <div class="menu-category" id="coffee">
                 <h2 class="section-title">☕ COFFEE</h2>
                 <div class="menu-grid" id="menuGridCoffee">
                 <div class="menu-card" data-menu="아메리카노">
@@ -48,7 +56,7 @@
             </div>
 
             <!-- LATTE -->
-            <div class="menu-category">
+            <div class="menu-category" id="latte">
                 <h2 class="section-title">🥛 LATTE</h2>
                 <div class="menu-grid" id="menuGridLatte">
                 <div class="menu-card" data-menu="플랫화이트">
@@ -84,7 +92,7 @@
             </div>
 
             <!-- TEA -->
-            <div class="menu-category">
+            <div class="menu-category" id="tea">
                 <h2 class="section-title">🫖 TEA</h2>
                 <div class="menu-grid" id="menuGridTea">
                 <div class="menu-card" data-menu="캐모마일">
@@ -125,7 +133,7 @@
             </div>
 
             <!-- ADE -->
-            <div class="menu-category">
+            <div class="menu-category" id="ade">
                 <h2 class="section-title">🍹 ADE</h2>
                 <div class="menu-grid" id="menuGridAde">
                 <div class="menu-card" data-menu="자몽에이드">
