--- a/staff.html
+++ b/staff.html
@@ -30,6 +30,13 @@
             </div>
         </section>
 
+        <!-- 관리 도구 -->
+        <section class="management-tools">
+            <button class="tool-btn" id="btnNotification" onclick="toggleNotification()">🔕 알림 꺼짐</button>
+            <button class="tool-btn" onclick="showStatistics()">📊 통계 보기</button>
+            <button class="tool-btn" onclick="showHiddenOrders()">👁️ 숨긴 주문 복원</button>
+        </section>
+
         <!-- 주문 목록 -->
         <section class="orders-section">
             <h2 class="section-title">📋 주문 목록</h2>
